# Moku-Go

./: .cursorrules  .gitignore  FIXME.md  README.md  commit_msg.txt  env.sh  moku_cli.py  osc.py  pyproject.toml
Probes/: Riscure-DS1120A EM FI Probe.md
Probes/Tips/: Riscure-DS1320A Body Bias Injection Probe Needles.md  Riscure-DS1321A EM FI Tips.md
docs/: GHDL-Readme.md  magic-strings.md
moku_go/: __init__.py  cli.py  device.py  osc.py
moku_go/config/: emfi_seq_config.yaml  scope_config.yaml
moku_go/emfi_seq/: __init__.py  emfi_seq.py
tests/: __init__.py  test_emfi_seq.py
